--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node server.ts",
     "build": "tsc",
     "dev": "nodemon --experimental-specifier-resolution=node src/server.ts"
   },
