--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start": "ts-node dist/server.js",
     "build": "tsc",
     "dev": "nodemon --experimental-specifier-resolution=node src/server.ts"
   },
